<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".activities.RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_background_login"
        android:scaleType="centerCrop"
        android:alpha="0.4"
        android:contentDescription="@null"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFullName"
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/nom_complet"
            android:layout_height="wrap_content"
        >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:layout_height="wrap_content"
        >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/mot_de_passe"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:passwordToggleEnabled="true"
        >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            app:boxBackgroundColor="@color/white"
            android:hint="@string/confirmez_le_mot_de_passe"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:passwordToggleEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="4dp"
            android:text="@string/cr_e_un_compte"
        />
    </LinearLayout>
</RelativeLayout>
